--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
 		"clean_out_from_script_tags": "ts-node scripts/clean_out_from_scripts_tags.ts"
 	},
 	"dependencies": {
+		"cheerio": "^1.0.0-rc.12",
+		"domhandler": "^5.0.3",
 		"next": "12.1.6",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"react-tracked": "^1.7.9"
 	},
 	"devDependencies": {
 		"@swc/core": "^1.2.205",
